--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>About the Album Collector</h1>
+<h1 class="about-header">About the Album Collector</h1>
 <hr />
-<p>Welcome, please feel free to browse our available albums. We should have most records in stock but if there are any sold out albums which you were looking to purchase we can have those ordered for you and shipped to our store or directly to your home address. In addition, if you own any albums that you plan on selling or trading in, please let us know as we would love to add them to our collection, enjoy!</p>
+<p class="about">Welcome, please feel free to browse our available albums. We should have most records in stock but if there are any sold out albums which you were looking for we can have those ordered for you and shipped to our store or directly to your home address. In addition, if you own any albums that you plan on selling or trading in, please let us know as we would love to add them to our collection, enjoy!</p>
 {% endblock %}
