--- a/main_app/templates/albums/detail.html
+++ b/main_app/templates/albums/detail.html
@@ -1,22 +1,44 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Album Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title"><strong>{{ album.title }}</strong></span>
-    <p>Band: {{ album.band }}</p>
-    <p>Release Year: {{ album.releaseyear }}</p>
-    {% if album.price > 20 %}
-      <p class="price">Price: ${{ album.price }}</p>
-    {% else %}
-      <p class="sold-out">Sold Out!</p>
-    {% endif %}
+<div class="row">
+	<div class="col s6">
+		<div class="card">
+			<div class="card-content">
+				<span class="card-title"
+					><strong>{{ album.title }}</strong></span
+				>
+				<p>Band: {{ album.band }}</p>
+				<p>Release Year: {{ album.releaseyear }}</p>
+				{% if album.price > 20 %}
+				<p class="price">Price: ${{ album.price }}</p>
+				{% else %}
+				<p class="sold-out">Sold Out!</p>
+				{% endif %}
+			</div>
+			<div class="card-action">
+				<a href="{% url 'albums_update' album.id %}">Edit</a>
+				<a href="{% url 'albums_delete' album.id %}">Delete</a>
+			</div>
+		</div>
+	</div>
+  <div class="col s6">
+    <table class="striped">
+      <thead>
+        <tr><th>Track #</th><th>Song</th></tr>
+      </thead>
+      <tbody>
+        {% for track in album.tracklist_set.all %}
+          <tr>
+            <td>{{ track.order }}</td>
+            <td>{{ track.track }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
-  <div class="card-action">
-      <a href="{% url 'albums_update' album.id %}">Edit</a>
-      <a href="{% url 'albums_delete' album.id %}">Delete</a>
 </div>
 
-{% endblock %}
+	{% endblock %}
+
