--- a/main_app/templates/albums/detail.html
+++ b/main_app/templates/albums/detail.html
@@ -24,6 +24,11 @@
 		</div>
 	</div>
   <div class="col s6">
+    <form method="POST">
+      {% csrf_token %}
+      {{ tracklist_form.as_p }}
+      <input type="submit" class="btn" value="Add Track">
+    </form>
     <table class="striped">
       <thead>
         <tr><th>Track #</th><th>Song</th><th>Single?</th></tr>
@@ -40,6 +45,11 @@
     </table>
   </div>
 </div>
+
+<script>
+  const selectEl = document.getElementById('id_single');
+  M.FormSelect.init(selectEl);
+  </script>
 
 	{% endblock %}
 
