--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,7 @@
 			type="text/css"
 			href="{% static 'css/styles.css' %}"
 		/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	</head>
 	<body id="body">
 		<header class="navbar-fixed">
@@ -47,3 +48,5 @@
 		</footer>
 	</body>
 </html>
+
+
