--- a/main_app/templates/albums/detail.html
+++ b/main_app/templates/albums/detail.html
@@ -46,6 +46,26 @@
   </div>
 </div>
 
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ album.title }}'s Band members</h3>
+    {% if album.band_members.count %}
+      {% for member in album.band_members.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <strong><span>{{ member.name }}</strong></span>
+              <span>{{ member.instrument }}</span>
+            </span>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Band Members</h5>
+    {% endif %}
+  </div>
+
 <script>
   const selectEl = document.getElementById('id_single');
   M.FormSelect.init(selectEl);
