Added band member navbar link and its now rendering available member list

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -35,7 +35,8 @@
 					<ul class="right">
 						<li><a href="{% url 'about' %}">About</a></li>
 						<li><a href="{% url 'albums_create' %}">Add an Album</a></li>
-						<li><a href="{% url 'albums' %}">View All My Albums</a></li>
+						<li><a href="{% url 'albums' %}">View Albums</a></li>
+						<li><a href="{% url 'members' %}">View Musicians</a></li>
 					</ul>
 				</div>
 			</nav>
