--- a/main_app/templates/main_app/bandmember_list.html
+++ b/main_app/templates/main_app/bandmember_list.html
@@ -4,7 +4,7 @@
 <h1>Musicians List</h1>
 
 {% for mem in bandmember_list %}
-  {% comment %} <a href="{% url 'mem_detail' mem.id %}"> {% endcomment %}
+  <a href="{% url 'members_detail' mem.id %}">
     <div class="card">
         <div class="card-content">
           <span class="card-title"><strong>{{ mem.name }}</strong></span>
