Able to now add a new band member via Add Musician tab

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -37,6 +37,7 @@
 						<li><a href="{% url 'albums_create' %}">Add an Album</a></li>
 						<li><a href="{% url 'albums' %}">View Albums</a></li>
 						<li><a href="{% url 'members' %}">View Musicians</a></li>
+						<li><a href="{% url 'members_create' %}">Add Musician</a></li>
 					</ul>
 				</div>
 			</nav>
