--- a/main_app/templates/main_app/bandmember_detail.html
+++ b/main_app/templates/main_app/bandmember_detail.html
@@ -12,7 +12,7 @@
       </div>
       <div class="card-action">
         <a href="{% url 'members_update' bandmember.id %}">Edit</a>
-        {% comment %} <a href="{% url 'toys_delete' toy.id %}">Delete</a> {% endcomment %}
+        <a href="{% url 'members_delete' bandmember.id %}">Delete</a>
       </div>
     </div>
   </div>
