One last change to fix home link, now finished

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,7 +27,7 @@
 				<div class="nav-wrapper">
 					<ul>
 						<li>
-							<a href="/" class="left brand-logo"
+							<a href="{% url 'home' %}" class="left brand-logo"
 								>&nbsp;&nbsp;Album Collector</a
 							>
 						</li>
